fix : layout horizontal scroll

--- a/src/layouts/primary-layout/primary-layoutStyle.module.scss
+++ b/src/layouts/primary-layout/primary-layoutStyle.module.scss
@@ -1,6 +1,4 @@
 .container {
-  display: flex;
-  flex-direction: column;
   width: 100%;
   height: 100vh;
   background-color: var(--clr-bg-primary);
@@ -13,8 +11,9 @@
 }
 
 .middle {
-  flex: 1;
   display: flex;
+  width: 100%;
+  height: calc(100vh - 50px);
 }
 
 .nav {
@@ -23,6 +22,6 @@
 }
 
 .outlet {
-  flex: 1;
-  margin: 10px;
+  width: calc(100% - 200px);
+  margin: 8px;
 }
